--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="center jumbotron">
+<h1>Welcome to the My Medicine App</h1>
+
+<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
