--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= full_title(yield(:title)) %></title>
+    <title>Mheath</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -17,7 +17,7 @@
     <%= render 'layouts/footer' %>
     </div>
   </body>
-=======
+
 	<header class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container">
 			<%= link_to "sample app", '#', id: "logo" %>
@@ -37,5 +37,4 @@
 
 	</div>
 </body>
->>>>>>> layouts
 </html>
