--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-<h1>Welcome to the My Medicine App</h1>
+<h1>Welcome to My Health App</h1>
 
 <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
