--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="center jumbotron">
+
+<% provide(:title, 'Home') %><div class="center jumbotron">
 <h1>Welcome to My Health App</h1>
 
 <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
