--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,10 @@
 	 <nav>
 		<ul class="nav navbar-nav navbar-right">
 		<li><%= link_to "Home", root_path %></li> 
+		<li><%= link_to "Get Started", "#" %></li>
 		<li><%= link_to "About", about_path %></li>
 		<li><%= link_to "Contact", contact_path %></li>
+
 
 		<% if logged_in? %>
 		<li><%= link_to "Users", '#' %></li>
