--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="container">
-	 <%= link_to "My Health", root_path, id: "logo" %>
+	 <%= link_to "MedApp", root_path, id: "logo" %>
 	 <nav>
 		<ul class="nav navbar-nav navbar-right">
 		<li><%= link_to "Home", root_path %></li> 
@@ -10,7 +10,7 @@
 
 
 		<% if logged_in? %>
-		<li><%= link_to "Users", '#' %></li>
+		
 		<li class="dropdown">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Account <b class="caret"></b> </a>
            <ul class="dropdown-menu">
