--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <% provide(:title, 'Home') %><div class="center jumbotron">
-<h1>Welcome to My Health App</h1>
+<h1>Welcome to MedApp</h1>
 
 <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
