--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,12 @@
 
-<% provide(:title, 'Home') %><div class="center jumbotron">
-<h1>Welcome to MedApp</h1>
-
-<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<% provide(:title, 'Home') %>
+<header id="head">
+		<div class="container">
+			<div class="row">
+				<h1 class="lead">AWESOME, CUSTOMIZABLE, FREE</h1>
+				<p class="tagline">PROGRESSUS: free business bootstrap template by <a href="http://www.gettemplate.com/?utm_source=progressus&amp;utm_medium=template&amp;utm_campaign=progressus">GetTemplate</a></p>
+				<p><a class="btn btn-default btn-lg" role="button">MORE INFO</a> <a class="btn btn-action btn-lg" role="button">DOWNLOAD NOW</a></p>
+			</div>
+		</div>
+	</header>
+	<!-- /Header -->
