--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,16 +7,16 @@
 					<div class="col-md-3 widget">
 						<h3 class="widget-title">Contact</h3>
 						<div class="widget-body">
-							<p>+234 23 9873237<br>
+							<p>+254 70 6480612<br>
 								<a href="mailto:#">some.email@somewhere.com</a><br>
 								<br>
-								234 Hidden Pond Road, Ashland City, TN 37015
+								234 Hidden Ground Road, Nakuru Town,37015
 							</p>	
 						</div>
 					</div>
 
 					<div class="col-md-3 widget">
-						<h3 class="widget-title">Follow me</h3>
+						<h3 class="widget-title">Follow Us</h3>
 						<div class="widget-body">
 							<p class="follow-me-icons">
 								<a href=""><i class="fa fa-twitter fa-2"></i></a>
@@ -47,18 +47,18 @@
 						<div class="widget-body">
 							<p class="simplenav">
 								<%= link_to "Home", root_path %>| 
-								<a href="about.html">About</a> |
-								<a href="sidebar-right.html">Sidebar</a> |
-								<a href="contact.html">Contact</a> |
-								<b><a href="signup.html">Sign up</a></b>
-							</p>
+								 <%= link_to "About", about_path %> |
+                                <%= link_to "Contact", contact_path %> |
+								<b><%= link_to "Login/Sign Up", signup_path %></b>
+
+						</p>
 						</div>
 					</div>
 
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-right">
-								Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+								Copyright &copy; 2016 | All Rights Reserved
 							</p>
 						</div>
 					</div>
