--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Contact') %>
-	<header id="head" class="secondary"></header>
-
+	
 	<!-- container -->
 	<div class="container">
 
@@ -45,7 +44,7 @@
 								<label class="checkbox"><input type="checkbox"> Sign up for newsletter</label>
 							</div>
 							<div class="col-sm-6 text-right">
-								<input class="btn btn-action" type="submit" value="Send message">
+								<input class="btn btn-primary" lass="btn btn-action" type="submit" value="Send message">
 							</div>
 						</div>
 					</form>
