add about us content

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -58,11 +58,11 @@
 				<div class="widget">
 					<h4>Address</h4>
 					<address>
-						2002 Holcombe Boulevard, Houston, TX 77030, USA
+						2002 Hidden Ground, Nakuru, TX 77030, Kenya
 					</address>
 					<h4>Phone:</h4>
 					<address>
-						(713) 791-1414
+						(+254) 706-480612
 					</address>
 				</div>
 
