--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
 		<ul class="nav navbar-nav navbar-right">
 		<li><%= link_to "Home", root_path %></li> 
 		<li><%= link_to "Reminder", reminder_path %></li>
-		<li><%= link_to "About", about_path %></li>
-		<li><%= link_to "Contact", contact_path %></li>
+		<li><%= link_to "About Us", about_path %></li>
+		<li><%= link_to "Contact Us", contact_path %></li>
 
 
 		<% if logged_in? %>
