--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,73 @@
 <% provide(:title, 'Signup') %>
-<h1>Sign Up</h1>
+	<!-- container -->
+	<div class="container">
 
-<div class="row">
- <div class="col-md-6 col-md-offset-3">
-  <%= form_for(@user) do |f| %>
+		<ol class="breadcrumb">
+			<li><a href="index.html">Home</a></li>
+			<li class="active">Registration</li>
+		</ol>
 
-  <%= render 'shared/error_messages' %>
+		<div class="row">
+			
+			<!-- Article main content -->
+			<article class="col-xs-12 maincontent">
+				<header class="page-header">
+					<h1 class="page-title">Registration</h1>
+				</header>
+				
+				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<h3 class="thin text-center">Register a new account</h3>
+							<p class="text-center text-muted">Lorem ipsum dolor sit amet, <a href="signin.html">Login</a> adipisicing elit. Quo nulla quibusdam cum doloremque incidunt nemo sunt a tenetur omnis odio. </p>
+							<hr>
 
-	<%= f.label :name %>
-	<%= f.text_field :name, class: 'form-control' %>
+							<form>
+								<div class="top-margin">
+									<label>First Name</label>
+									<input type="text" class="form-control">
+								</div>
+								<div class="top-margin">
+									<label>Last Name</label>
+									<input type="text" class="form-control">
+								</div>
+								<div class="top-margin">
+									<label>Email Address <span class="text-danger">*</span></label>
+									<input type="text" class="form-control">
+								</div>
 
-	<%= f.label :email %>
-	<%= f.email_field :email, class: 'form-control' %>
+								<div class="row top-margin">
+									<div class="col-sm-6">
+										<label>Password <span class="text-danger">*</span></label>
+										<input type="text" class="form-control">
+									</div>
+									<div class="col-sm-6">
+										<label>Confirm Password <span class="text-danger">*</span></label>
+										<input type="text" class="form-control">
+									</div>
+								</div>
 
-	<%= f.label :password %>
-	<%= f.password_field :password, class: 'form-control' %>
+								<hr>
 
-	<%= f.label :password_confirmation, "Confirmation" %>
-	<%= f.password_field :password_confirmation, class: 'form-control' %>
+								<div class="row">
+									<div class="col-lg-8">
+										<label class="checkbox">
+											<input type="checkbox"> 
+											I've read the <a href="page_terms.html">Terms and Conditions</a>
+										</label>                        
+									</div>
+									<div class="col-lg-4 text-right">
+										<button class="btn btn-action" type="submit">Register</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
 
-	<%= f.submit "Create my account", class: "btn btn-primary" %>
-  <% end %>
-  </div>
- </div>
+				</div>
+				
+			</article>
+			<!-- /Article -->
+
+		</div>
+	</div>	<!-- /container -->
