add home view link

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="index.html">Home</a></li>
+			<li><%= link_to "Home", root_path %></li>
 			<li class="active">Registration</li>
 		</ol>
 
@@ -24,22 +24,22 @@
 
 							<%= form_for(@user) do |f| %>
 
-  <%= render 'shared/error_messages' %>
+							   <%= render 'shared/error_messages' %>
 
-	<%= f.label :name %>
-	<%= f.text_field :name, class: 'form-control' %>
+								<%= f.label :name %>
+								<%= f.text_field :name, class: 'form-control' %>
 
-	<%= f.label :email %>
-	<%= f.email_field :email, class: 'form-control' %>
+								<%= f.label :email %>
+								<%= f.email_field :email, class: 'form-control' %>
 
-	<%= f.label :password %>
-	<%= f.password_field :password, class: 'form-control' %>
+								<%= f.label :password %>
+								<%= f.password_field :password, class: 'form-control' %>
 
-	<%= f.label :password_confirmation, "Confirmation" %>
-	<%= f.password_field :password_confirmation, class: 'form-control' %>
+								<%= f.label :password_confirmation, "Confirmation" %>
+								<%= f.password_field :password_confirmation, class: 'form-control' %>
 
-	<%= f.submit "Create my account", class: "btn btn-primary" %>
-  <% end %>
+								<%= f.submit "Create my account", class: "btn btn-primary" %>
+							  <% end %>	
 						</div>
 					</div>
 
