--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
 					<div class="panel panel-default">
 						<div class="panel-body">
 							<h3 class="thin text-center">Register a new account</h3>
-							<p class="text-center text-muted">Lorem ipsum dolor sit amet, <a href="signin.html">Login</a> adipisicing elit. Quo nulla quibusdam cum doloremque incidunt nemo sunt a tenetur omnis odio. </p>
+							<p class="text-center text-muted">Lorem ipsum dolor sit amet, <%= link_to "Login", login_path %> adipisicing elit. Quo nula quibusdam cum doloremque incidunt nemo sunt a tenetr omnis odo. </p>
 							<hr>
 
 							<%= form_for(@user) do |f| %>
