--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,8 @@
 		<li><%= link_to "Reminder", reminder_path %></li>
 		<li><%= link_to "About Us", about_path %></li>
 		<li><%= link_to "Contact Us", contact_path %></li>
+		<li><%= link_to "Contact Us", contact_path %></li>
+		
 
 
 		<% if logged_in? %>
