--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,9 @@
 		<li><%= link_to "Reminder", reminder_path %></li>
 		<li><%= link_to "About Us", about_path %></li>
 		<li><%= link_to "Contact Us", contact_path %></li>
-		
-		
 
-
-		<% if logged_in? %>
-		
+		<% if logged_in? %>	
+		<li><%= link_to "Users", users_path %> </li>	
 		<li class="dropdown">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Account <b class="caret"></b> </a>
            <ul class="dropdown-menu">
