--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,8 @@
 	<h1>All users</h1>
 	<ul class="users">
 	<% @users.each do |user| %>
-	<li>
-	<%= link_to user.name, user %>
-	</li>
+	
+	<%= render user %>
+
 	<% end %>	
 </ul>
