--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 <% provide(:title, 'All users') %>
 	<h1>All users</h1>
+
+	<% will_paginate   %>
+
 	<ul class="users">
 	<% @users.each do |user| %>
 	
@@ -7,3 +10,5 @@
 
 	<% end %>	
 </ul>
+
+<% will_paginate   %>
