--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,12 @@
 <% provide(:title, 'All users') %>
-	<h1>All users</h1>
-
-	<% will_paginate   %>
-
-	<ul class="users">
-	<% @users.each do |user| %>
-	
-	<%= render @users %>
-
-	<% end %>	
+<h1>All users</h1>
+<%= will_paginate %>
+<ul class="users">
+<% @users.each do |user| %>
+<li>
+<%= gravatar_for user, size: 50 %>
+<%= link_to user.name, user %>
+</li>
+<% end %>
 </ul>
-
-<% will_paginate   %>
+<%= will_paginate %>
