--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
 				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
 					<div class="panel panel-default">
 						<div class="panel-body">
-							<h3 class="thin text-center">Register a new account Here</h3>
+							<h3 class="thin text-center">Register a new account</h3>
 							<p class="text-center text-muted">Lorem ipsum dolor sit amet, <%= link_to "Login", login_path %> adipisicing elit. Quo nula quibusdam cum doloremque incidunt nemo sunt a tenetr omnis odo. </p>
 							<hr>
 
