--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -11,13 +11,13 @@
 		<div class="row">
 			
 			<!-- Article main content -->
-			<article class="col-sm-9 maincontent">
+			<article class="col-sm-9 mainc ontent">
 				<header class="page-header">
 					<h1 class="page-title">Contact us</h1>
 				</header>
 				
 				<p>
-					We’d love to hear from you.Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can Please allow a couple days for me to respond. days for me to respond.
+					We’d love to hear from you.Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can Please allow a couplfggfge days for me to respond. days for me to respond.
 				</p> 
 				<br>
 					<form>
